fix: prevent overflow on mobile

--- a/web-design/documentation-page/style.css
+++ b/web-design/documentation-page/style.css
@@ -188,7 +188,7 @@ a:hover {
   }
 
   .main {
-    width: 100vw;
+    width: 95vw;
   }
 
   .main-section {
